# CoralCSS

./: .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CORALCSS_CLAUDE_CODE_PROMPT.md  GEMINI.md  IMPLEMENTATION.md  LICENSE  README.md  ROADMAP.md  SPECIFICATION.md  TASKS.md  coverage_output.txt  eslint.config.js  llms.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
.serena/: project.yml
benchmarks/: compare.ts
coral-turbo/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json  tsup.config.ts
coral-turbo/crates/coral-turbo-core/: Cargo.toml
coral-turbo/crates/coral-turbo-core/benches/: extractor_bench.rs  generator_bench.rs  matcher_bench.rs  parser_bench.rs
coral-turbo/crates/coral-turbo-core/examples/: basic_usage.rs  performance_demo.rs  real_world.rs
coral-turbo/crates/coral-turbo-core/src/: cache.rs  extractor.rs  generator.rs  lib.rs  matcher.rs  parser.rs  trie.rs  types.rs
coral-turbo/crates/coral-turbo-core/tests/: integration_test.rs
coral-turbo/crates/coral-turbo-napi/: Cargo.toml
coral-turbo/crates/coral-turbo-napi/src/: lib.rs
coral-turbo/crates/coral-turbo-wasm/: Cargo.toml
coral-turbo/crates/coral-turbo-wasm/src/: lib.rs
coral-turbo/src/: index.ts  types.ts
coral-turbo/src/native/: index.ts
coral-turbo/src/wasm/: index.ts
docs/: CORALCSS_ANALYSIS_REPORT.md  tailwind-migration.md
examples/01-basic/: index.html
examples/02-dark-mode/: index.html
examples/03-responsive/: index.html
examples/04-flexbox/: index.html
examples/05-grid/: index.html
examples/06-typography/: index.html
examples/07-colors/: index.html
examples/08-borders/: index.html
examples/09-transforms/: index.html
examples/10-transitions/: index.html
examples/11-filters/: index.html
examples/12-container-queries/: index.html
examples/13-anchor-positioning/: index.html
examples/14-dialog/: index.html
examples/15-dropdown/: index.html
examples/16-tabs/: index.html
examples/17-accordion/: index.html
examples/18-toast/: index.html
examples/19-vite/: index.html  styles.css
examples/20-postcss/: index.html
scripts/: build-css.js
src/: errors.ts  index.ts  kernel.ts  types.ts
src/angular/: directive.ts  index.ts  module.ts  pipe.ts  service.ts  utils.ts
src/components/: accordion.ts  ai-chat.ts  alert-dialog.ts  alert.ts  aspect-ratio.ts  avatar.ts  badge.ts  base.ts  breadcrumb.ts  button.ts  calendar.ts  card.ts  carousel.ts  checkbox.ts  chip.ts  code.ts  collapsible.ts  color-picker.ts  combobox.ts  command.ts  compare-slider.ts  context-menu.ts  countdown.ts  data-grid.ts  data-table.ts  date-picker.ts  date-range-picker.ts  dialog.ts  dock.ts  drawer.ts  dropdown.ts  empty-state.ts  file-upload.ts  hover-card.ts  image-crop.ts  image-gallery.ts  index.ts  infinite-scroll.ts  input.ts  kanban.ts  (+49 more)
src/config/: css-config.ts  css-parser.ts  css-theme-parser.ts  index.ts
src/core/: cache.ts  extractor.ts  fallbacks.ts  generator.ts  (+10 more)
starter-kits/: README.md
tests/: vitest.setup.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
(+432 files in other folders)
