[workspace]
resolver = "2"
members = [
    "crates/coral-turbo-core",
    "crates/coral-turbo-wasm",
    "crates/coral-turbo-napi",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coralcss/coralcss"
description = "High-performance Rust engine for CoralCSS - blazing fast CSS utility processing"

[workspace.dependencies]
# Core dependencies
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
rayon = "1.10"
ahash = "0.8"
rustc-hash = "2.0"
memchr = "2.7"
bstr = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

# NAPI
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "s"
