[package]
name = "coral-turbo-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js native bindings for CoralCSS Turbo engine (NAPI-RS)"

[lib]
crate-type = ["cdylib"]

[dependencies]
coral-turbo-core = { path = "../coral-turbo-core" }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
